// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders a path for y1 prop 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <clippath
      id=":r2:"
    >
      <rect
        height="-40"
        width="0"
        x="40"
      />
    </clippath>
    <path
      clip-path="url(#:r2:)"
    />
  </svg>
</div>
`;

exports[`Renders a path for y2 prop 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <clippath
      id=":r3:"
    >
      <rect
        height="-40"
        width="0"
        x="40"
      />
    </clippath>
    <path
      clip-path="url(#:r3:)"
    />
  </svg>
</div>
`;
